crates/ddlog-syntax/tests/validation/fail/double_extern_function.dl
// kind:item validate:true
extern extern function foo() {}
